--- a/Views/connexion.html
+++ b/Views/connexion.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="/Css/form.css">
-        <!-- CSS -->
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  href='/bootstrap-5/css/bootstrap.css' rel='stylesheet'>
-    <link href='/Css/style.css' rel='stylesheet'>
+    <link href='/Css/generale.css' rel='stylesheet'>
+    <link href='/Css/./inscription-et-connextion.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/1748750407.js" crossorigin="anonymous"></script>
     <script src='/Views/js/sideBar.js' defer></script>
     <script src='/bootstrap-5/js/bootstrap.js' defer></script>
@@ -14,37 +14,31 @@
 </head>
 <body>
 
-   
-        <div align="center" class="border" >
-        <img src="/images/rdk_financial.png" width="120px">
-       <br><br>
-            <form method="POST" action="" >
-                <table>
-                    <tr>
-                        <td>
-                            <label for="mail">Mail :</label>
-                       <div class="fm">
-                           <input type="email" placeholder="Votre mail" id="mail" name="mail" /> 
-                       </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="mdp">Mot de passe :</label>
-                       <div class="fm">
-                       <input type="password" placeholder="Votre mot de passe" id="mdp" name="mdp"> 
-                       </div>
-                        </td>
-                    </tr>
-                </table>
-  
-                <br>
-                <input type="submit" name="submit" class="submit" value="Se connecter">
-                <br>
-                <a href="#">Mot de passe oublier ?</a>
-            </form>
-           
+    <div class = 'container-data'>
+
+        <form  class='row connexion'>
+          <img src='/images/rdk_financial.png' class='logo_rdk_connexion'>
+        <div class='col-md-12 row'>
+                
+              <div class="mb-3 col-12">
+                <label for="exampleFormControlInput1" class="form-label">Identifiant</label>
+                <input type="text" class="form-control " >
+              </div>
+
+              <div class="mb-3 col-12">
+                <label for="exampleFormControlInput1" class="form-label">Mot de passe</label>
+                <input type="text" class="form-control "  >
+              </div>
+            <div class='col-12'>
+              <button type='submit' class='btn btn-primary w-100 '>Se connecter</button>
+            </div>
+            <div class='d-flex justify-content-around flex-nowrap'>
+              <p class='col-6' style='white-space: nowrap'>Mot de passe oublié</p>
+              <a href="/Views/inscription.html" class='col-8' style='padding-left:35px'>s'inscrire</a>
+          </div>
         </div>
-    
+       
+        </form>
+    </div>
 </body>
 </html>
