--- a/Views/inscription.html
+++ b/Views/inscription.html
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="/Css/form.css">
-        <!-- CSS -->
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription</title>
+    <link  href='/bootstrap-5/css/bootstrap.css' rel='stylesheet'>
+    <link href='/Css/generale.css' rel='stylesheet'>
+    <link href='/Css/./inscription-et-connextion.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/1748750407.js" crossorigin="anonymous"></script>
+    <script src='/Views/js/sideBar.js' defer></script>
+    <script src='/bootstrap-5/js/bootstrap.js' defer></script>
+    <title>connexion</title>
 </head>
 <body>
-    
-        <div align="center" class="border">
+
+    <img src='/images/rdk_financial.png' style='width:100px; height: 100px; margin-left: 25px; margin-top: 25px'>
+    <div class = 'container-data'>
+
+        <form  class='row inscription'>
+
+        <div class='col-md-12 row'>
         
-            <h2>Inscription</h2>
-            <br />
-            <form method="POST" action="" >
-                <table>
-                    <tr>
-                        <td>
-                            <label  for="nom">Nom :</label>
-                       <div class="fm">
-                           <input type="text" placeholder="votre nom" id="name" name="name" /> 
-                       </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="prenom">Prenom :</label>
-                       <div class="fm">
-                           <input type="text" placeholder="votre nom" id="name" name="name" /> 
-                       </div>
-                        </td>
-                        <tr>
-                        <td>
-                            <label for="mail">Mail :</label>
-                       <div class="fm">
-                           <input type="email" placeholder="votre mail" id="mail" name="mail" /> 
-                       </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="mdp">Mot de passe :</label>
-                       <div class="fm">
-                       <input type="password" placeholder="entrez mot de passe" id="mdp" name="mdp"> 
-                       </div>
-                        </td>
-                    </tr>
-                    </tr>
-                </table>
-                <br>
-                <input type="submit" name="submit" class="submit" value="Valider">
-            </form>
-            <br>
-            <a href="connexion.php"><button class="Button">retour</button></a>
-            <br>
-            <?php
-            if(isset($erreur)){
-                echo '<font color="red">'.$erreur."</font>";
-            }
-            ?>
-           
+              <div class="mb-3 col-12">
+                <label for="exampleFormControlInput1" class="form-label">Nom</label>
+                <input type="email" class="form-control  " >
+              </div>
+                    
+              <div class="mb-3 col-12">
+                <label for="exampleFormControlInput1" class="form-label">Prenom</label>
+                <input type="email" class="form-control" >
+              </div>
+
+              <div class="mb-3 col-12">
+                <label for="exampleFormControlInput1" class="form-label">Identifiant</label>
+                <input type="email" class="form-control"  >
+              </div>
+
+              <div class="mb-3 col-12 ">
+                <label for="exampleFormControlInput1" class="form-label">Mot de passe</label>
+                <input type="email" class="form-control" >
+              </div>
+
+              <div class="mb-3 col-12">
+                <label for="exampleFormControlInput1" class="form-label">Confirmer le mot de passe</label>
+                <input type="email" class="form-control"  >
+              </div> 
+              
+            <div class='col-12'>
+              <button type='submit' class='btn btn-primary w-100'>Envoyer</button>
+            </div>
         </div>
-    
+       
+        </form>
+    </div>
+</body>
 </body>
 </html>
