--- a/Views/location.html
+++ b/Views/location.html
@@ -2,244 +2,250 @@
 <html lang="fr">
 
 <head>
-    <link rel="stylesheet" href="/Css/formsadd.css">
-    <!-- CSS -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  href='/bootstrap-5/css/bootstrap.css' rel='stylesheet'>
-    <link href='/Css/style.css' rel='stylesheet'>
-    <script src="https://kit.fontawesome.com/1748750407.js" crossorigin="anonymous"></script>
-    <script src='/Views/js/sideBar.js' defer></script>
-    <script src='/bootstrap-5/js/bootstrap.js' defer></script>
-    <title>location</title>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href='/bootstrap-5/css/bootstrap.css' rel='stylesheet'>
+  <link href='/Css/generale.css' rel='stylesheet'>
+  <link href='/Css/location.css' rel='stylesheet'>
+  <script src="https://kit.fontawesome.com/1748750407.js" crossorigin="anonymous"></script>
+  <script src='/Views/js/sideBar.js' defer></script>
+  <script src='/bootstrap-5/js/bootstrap.js' defer></script>
+
+  <title>Ajout</title>
 </head>
 
 <body>
-    <div id="background"></div>
-    <header >
-      
-      <button class='btn-open'>
-        <img src='/images/icons8-menu.svg'>
-     </button>
-       <nav class= 'navbarHead' id='sidebarjs'>
-         <button type="button" class='close'><i class="fas fa-times"></i></button>
-         <img src='/images/rdk_financial.png' alt="logo" class='logo-rdk'>
-         <div class='menu'>
-             <div class='menu-item'>
-                 <h3>Réservation</h3>
-                 <div>  
-                     <ul class='sous-menu'>
-                         <li><a href='#'>Planning de réservation</a></li>
-                         <li><a href="/views/location.html">Réaliser un contrat de location</a></li>
-                        <li> <a href="clients.html">client</a></li>
-                     </ul>
-                 </div>
-             </div>
-             <div class='menu-item'>
-               <h3>Gestion des véhicules</h3>
-               <div>
-                   <ul class='sous-menu'>
-                    <li><a href='/views/ajout_vehicule.html'>Ajouter un véhicule</a></li>
-                    <li><a href='/views/acceuil.html'>véhicules</a></li>
-                   </ul>
-               </div>
-           </div>
-         </div> 
-       </nav>
+  <div id="background"></div>
 
-    <div align="center" class="border">
-        <br />
-        <h1>Contrat de location</h1>
-        <form method="POST" action="">
-            <table>
-                <tr>
-                    <td>
-                        <label for="name">Nom :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Prenom :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Email :</label>
-                        <div class="fm">
-                            <input type="email" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Télephone :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                <td>
-                        <label for="name">Adresse :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Société :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">N°siret :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Permis de conduire :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                <td>
-                        <label for="name">Lieu d'obtention :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td><td>
-                        <label for="name">Date d'obtention :</label>
-                        <div class="fm">
-                            <input type="date" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Imatriculation  :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Date de départ :</label>
-                        <div class="fm">
-                            <input type="date" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                </tr><tr>
-                
-                    <td>
-                        <label for="name">Date de retour :</label>
-                        <div class="fm">
-                            <input type="date" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Montant de garantie :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                        <label for="name">Garantie accident :</label>
-                        <div >
-                        <input type="radio" id="huey" name="drone" >
-                             <label for="oui">Oui</label>
-                        </div>
-                        <div >
-                        <input type="radio" id="non" name="drone"  checked>
-                             <label for="non">Nom</label>
-                        </div>
 
-                    </td>
-                    <td>
-                    <label for="name">Garantie vol :</label>
-                        <div >
-                        <input type="radio" id="huey" name="drone"  >
-                             <label for="oui">Oui</label>
-                        </div>
-                        <div >
-                        <input type="radio" id="non" name="drone"  checked>
-                             <label for="non">Nom</label>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                <td>
-                <br>
-                    <label for="name">Assurance passagées :</label>
-                        <div >
-                        <input type="radio" id="2" name="drone"  >
-                             <label for="oui">Oui</label>
-                        </div>
-                        <div >
-                        <input type="radio" id="2" name="drone"  checked>
-                             <label for="non">Non</label>
-                        </div>
-                    </td>
-                    <td>
-                    <label for="name">Ajouter un autre conducteur :</label>
-                    </td>
-                </tr>
-                <tr>
-                <td>
-                    <br>
-                    <label for="name">Type de paiement :</label>
-                        <div >
-                        <input type="radio" id="carte" name="carte"  checked>
-                             <label for="carte">Carte bancaire</label>
-                        </div>
-                        <div >
-                        <input type="radio" id="espece" name="espece"  >
-                             <label for="espece">Espece</label>
-                        </div>
-                        <div >
-                        <input type="radio" id="virement" name="virement"  >
-                             <label for="viremet">Virement</label>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                <td>
-                <label for="name">Signature RDK</label>
-                </td>
-                <td>
-                <label for="name">Signature client</label>
-                </td>
-                <td>
-                <br><br>
-                        <label for="name">Date   :</label>
-                        <div class="fm">
-                            <input type="date" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                    <td>
-                    <br><br>
-                        <label for="name">Montant  :</label>
-                        <div class="fm">
-                            <input type="text" id="name" name="name" value="" />
-                        </div>
-                    </td>
-                </tr>
-                
-            </table>
-            <br><br>
-            <input type="file" id="name" name="name" value="" />
-                <input type="submit" name="submit" class="submit" value="enregister">
-                
-                        
-        </form>
+  <header>
+    <button class='btn-open'>
+      <img src='/images/icons8-menu.svg'>
+    </button>
+    <nav class='navbarHead' id='sidebarjs'>
+      <button type="button" class='close'><i class="fas fa-times"></i></button>
+      <img src='/images/rdk_financial.png' alt="logo" class='logo-rdk'>
+      <div class='menu'>
+        <div class='menu-item'>
+          <h3>Réservation</h3>
+          <div>
+            <ul class='sous-menu'>
+              <li><a href='#'>Planning de réservation</a></li>
+              <li><a href="/views/location.html">Réaliser un contrat de location</a></li>
+              <li> <a href="clients.html">Clients</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class='menu-item'>
+          <h3>Gestion des véhicules</h3>
+          <div>
+            <ul class='sous-menu'>
+              <li><a href='/views/ajout_vehicule.html'>Ajouter un véhicule</a></li>
+              <li><a href='/views/acceuil.html'>Véhicules</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <h1 class='title-head'>Contrat de location</h1>
 
-        <?php
-        if (isset($erreur)) {
-            echo '<font color="red">' . $erreur . "</font>";
-        }
-        ?>
+  <div class='container-data'>
 
-    </div>
+    <form class='row location'>
 
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Nom</label>
+        <input type="email" class="form-control  ">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Prenom</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Telephone</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Email</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Société</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">N°siret</label>
+        <input type="number" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Permis de conduire</label>
+        <input type="text" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Photo permis de conduire</label>
+        <input type="file" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Lieu d'obtention</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Date d'obtention</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class=' mb-3 col-6 col-md-4 col-lg-3' style="margin-top: 35px;">
+        <select class="form-select w-auto col-md-5 form-select-sm" aria-label=".form-select-sm example">
+          <option selected>Choisir un vehicule</option>
+          <option value="diesel">vehicule-1</option>
+          <option value="sans-plomb 98">vehicule-2</option>
+          <option value="sans-plomb 95">vehicule-3</option>
+          <option value="electrique">vehicule-4</option>
+          <option value="hybride">vehicule-5</option>>
+        </select>
+      </div>
+
+      <div class="mb-3 col-6  col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Date de départ</label>
+        <input type="text" class="form-control">
+      </div>
+
+
+      <div class="mb-3 col-6  col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Date de retour</label>
+        <input type="number" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6  col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Dépôt de garantie</label>
+        <input type="date" class="form-control">
+      </div>
+
+      <div class="mb-3 col-6  col-md-4 col-lg-3">
+        <label>Garantie dommage accident</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+          <label class="form-check-label" for="flexRadioDefault1">
+            oui
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+          <label class="form-check-label" for="flexRadioDefault2">
+            non
+          </label>
+        </div>
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Montant garantie dommage accident</label>
+        <input type="number" class="form-control" multiple>
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label>Garantie vol </label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+          <label class="form-check-label" for="flexRadioDefault1">
+            oui
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+          <label class="form-check-label" for="flexRadioDefault2">
+            non
+          </label>
+        </div>
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label for="exampleFormControlInput1" class="form-label">Montant garantie vol</label>
+        <input type="number" class="form-control" multiple>
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label>Assurance personnes transportées </label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+          <label class="form-check-label" for="flexRadioDefault1">
+            oui
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+          <label class="form-check-label" for="flexRadioDefault2">
+            non
+          </label>
+        </div>
+      </div>
+
+      <div class="mb-3 col-6 col-md-4 col-lg-3">
+        <label>Type de paiement </label>
+        <div class="form-check">
+          <input class="form-check-input" checke type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+          <label class="form-check-label" for="flexRadioDefault1">
+            carte bancaire
+          </label>
+        </div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+          <label class="form-check-label" for="flexRadioDefault2">
+            Espèces
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+          <label class="form-check-label" for="flexRadioDefault2">
+            virement
+          </label>
+        </div>
+      </div>
+
+      <div class="mb-3 row  col-12 col-md-12 col-lg-6">
+        <div class=" col-6 ">
+          <label for="exampleFormControlTextarea1" class="form-label">signature Rdk</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+
+        <div class=" col-6">
+          <label for="exampleFormControlTextarea1" class="form-label">Signature Client</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </div>
+
+      <div class="mb-3  col-12 col-md-6 col-lg-6">
+        <label for="exampleFormControlInput1" class="form-label">Montant</label>
+        <input type="number" class="form-control  w-50">
+      </div>
+
+      <div class="mb-3 row  col-12- col-md-6 col-lg-6">
+        <div class="mb-3 ">
+          <label for="exampleFormControlInput1" class="form-label">Ajouter un fichier</label>
+          <input type="file" class="form-control ">
+        </div>
+
+        <div class="mb-3 col-12 col-md-12 col-lg-6 ">
+          <button type='submit' class='btn  btn-location '>Enregistrer</button>
+        </div>
+      </div>
+      </form>  
+ </div>
+ <div class="next-page">
+  <a  href="/Views/etat_vehicule.html">Suivant<span class=' chevron chevron-right'><i class="fas fa-chevron-right"></i></span> </button>
+</div>
 </body>
 
 </html>
